# Roll-for-WIS

./: .breakpoints  .main.py.3051080948~  answers(1).txt  answers(2).txt  answers(3).txt  answers(4).txt  export_file.txt  main.py  pyproject.toml  questions.txt  score.txt
data/: answers(1).txt  answers(2).txt  answers(3).txt  answers(4).txt  questions.txt  score.txt  scoreboard.txt
